# notch

./: .gitignore  README.md  package.json  tsconfig.json
scripts/: generate-icons.ts
src/: App.tsx  index.html  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/Editor/: CellContainer.tsx  NoteEditor.tsx
src/components/Editor/cells/: CodeCell.tsx  DiagramCell.tsx  LatexCell.tsx  MarkdownCell.tsx  TextCell.tsx
src/components/NoteList/: NoteList.tsx  NoteListItem.tsx
src/components/Preview/: NotePreview.tsx
src/components/Sidebar/: Sidebar.tsx
src/services/: database.ts  export.ts  import.ts  search.ts
src/store/: index.ts
src/styles/: index.css
src/types/: index.ts
